lib_libazqmpi_a_HEADERS += azqmpi/include/check.h       \
                           azqmpi/include/common.h      \
                           azqmpi/include/env.h         \
                           azqmpi/include/errhnd.h      \
                           azqmpi/include/mpif.h        \
                           azqmpi/include/mpi.h         \
                           azqmpi/include/object.h      \
                           azqmpi/include/p_collops.h   \
                           azqmpi/include/p_comn.h      \
                           azqmpi/include/p_config.h    \
                           azqmpi/include/p_dtype.h     \
                           azqmpi/include/p_errhnd.h    \
                           azqmpi/include/p_group.h     \
                           azqmpi/include/p_key.h       \
                           azqmpi/include/p_rqst.h      \
                           azqmpi/include/p_status.h    \
                           azqmpi/include/lfs.h
