noinst_HEADERS          += pmi/simple/defs.h              \
                           pmi/simple/simple_pmiutil.h

lib_libazqmpi_a_HEADERS += pmi/simple/mpibase.h           \
                           pmi/simple/mpimem.h            \
                           pmi/simple/pmiconf.h           \
                           pmi/simple/pmi.h

lib_libazqmpi_a_SOURCES += pmi/simple/exit.c              \
                           pmi/simple/msgprint.c          \
                           pmi/simple/safestr.c           \
                           pmi/simple/simple_pmi.c        \
                           pmi/simple/simple_pmiutil.c
